# cc-spec-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README-ja.md  README.md  REFERENCE.md  RELEASE.md  SUPPORT.md  pyproject.toml  spec-driven.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/scripts/: create-github-release.sh  create-release-packages.ps1  create-release-packages.sh  generate-release-notes.sh
docs/: README.md  agents.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md  upgrade.md
scripts/bash/: check-prerequisites.sh  create-new-feature.sh  setup-plan.sh  test-local.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  create-new-feature.ps1  setup-plan.ps1  test-local.ps1  update-agent-context.ps1
src/grove_cli/: __init__.py
src/specify_cli/: __init__.py
templates/: checklist-template.md  final-self-review-summary-template.md  phase-self-review-template.md  plan-template.md  tasks-template.md  verification-template.md  vscode-settings.json
templates/agent-configs/: CLAUDE.md
templates/agents/: AGENTS.md
templates/agents/claude/: CLAUDE.md
templates/agents/claude/agents/: documentation.md  verification.md
templates/agents/claude/commands/: implement.md
templates/agents/claude/rules/: constitution.md
templates/agents/commands/: analyze.md  checklist.md  clarify.md  constitution.md  design.md  fix.md  implement.md  plan.md  review.md  specify.md  tasks.md  taskstoissues.md
templates/commands/: design.md
templates/en/: constitution-template.md  spec-template.md
templates/ja/: constitution-template.md  spec-template.md
templates/skills/load-project-context/: SKILL.md
