[project]
name = "specify-ex-cli"
version = "0.1.0"
description = "Specify EX CLI - Extended version with multi-language support. Part of GitHub Spec Kit EX. A tool to bootstrap your projects for Spec-Driven Development (SDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
specify-ex = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

[tool.hatch.build.targets.wheel.shared-data]
"templates" = "share/specify-ex-cli/templates"

